--- a/.env_example
+++ b/.env_example
@@ -10,4 +10,7 @@
 
 DATABASE_URL="postgresql://handyman_user:handyman_password@localhost:5432/handyman_db?schema=public"
 JWT_SECRET="MlmuzoxqhZx6JL3oeYTerPvkwFuO+bCRTlkfTkKWZ94="
+
+# Skip shadow database in development
+PRISMA_MIGRATE_SKIP_GENERATE=1
 PORT=3000
