--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch --detectOpenHandles --forceExit",
+    "test:coverage": "jest --coverage --detectOpenHandles --forceExit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.22.0",
     "@types/multer": "^1.4.13",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -39,6 +41,7 @@
     "@types/node": "^24.0.1",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.2",
+    "jest-mock-extended": "^4.0.0",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0"
   },
