--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
