--- a/.env.test
+++ b/.env.test
@@ -2,4 +2,4 @@
 NODE_ENV=test
 PORT=3001
 JWT_SECRET=test-secret
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/handyman_test
+DATABASE_URL="postgresql://handyman_user:handyman_password@localhost:5432/handyman_test"
