job request and matching

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "prisma:generate": "prisma generate",
+    "clean": "find src -name '*.js' -type f -delete && find src -name '*.js.map' -type f -delete",
+    "prisma:generate": "prisma generate && npm run clean",
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts",
     "test": "jest --detectOpenHandles --forceExit",
@@ -25,6 +26,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-validator": "^7.2.1",
+    "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "prisma": "^5.10.2",
