--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,43 @@
 node_modules/
 
+# Prisma generated files
 /src/generated/prisma
+
+# Generated JavaScript files
+src/**/*.js
+src/**/*.js.map
+
+# Build output
+dist/
+build/
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
