--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vision": "^5.2.0",
     "@prisma/client": "^5.22.0",
     "@types/multer": "^1.4.13",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
